# imagefinder

./: .envrc  .gitignore  README.md  benchmark_results.csv  pyproject.250318_2207.toml  pyproject.toml
rust/: Cargo.toml
rust/src/: lib.rs
src/: database.py  image_types.py  imageprocessor.py  main.py  scanner.py
src/imagefinder/: benchmark.py  database.py  imageprocessor.py  logging.py  main.py  raw_processing.py  rust_test.py  scanner.py  scanner_250318_2144.py  utils.py
