[tool.poetry]
name = "imagefinder"
version = "0.1.0"
description = "Tool for finding similar images and handling RAW formats"
authors = ["ab22375 <ab22375@gmail.com>"]
readme = "README.md"
packages = [{include = "imagefinder", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.4"
opencv-contrib-python = "^4.11.0"
pillow = "^11.1.0"
rawpy = "^0.24.0"
imageio = "^2.37.0"
maturin = "^1.8.3"
olefile = "^0.47"
pandas = "^2.2.3"
matplotlib = "^3.10.1"

[tool.poetry.scripts]
imagefinder = "imagefinder.main:main"

[build-system]
requires = ["poetry-core>=1.0.0", "maturin>=1.8.3,<2.0"]
build-backend = "maturin"

[tool.maturin]
# Either remove python-source or make sure the module exists
# python-source = "src"  # Commented out to resolve the warning
module-name = "raw_processor"
manifest-path = "rust/Cargo.toml"  # Point to the Rust Cargo.toml in the rust folder
features = ["pyo3/extension-module"]