[package]
name = "raw_processor"
version = "0.1.0"
edition = "2021"

[lib]
name = "raw_processor"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19.0", features = ["extension-module", "abi3-py38"] }
numpy = "0.19.0"
rawloader = "0.37.1"
image = "0.24.7"
ndarray = "0.15.6"

[build-dependencies]
pyo3-build-config = "0.19.0"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3